Fix: right align share in mobile nav

--- a/src/style/header.styl
+++ b/src/style/header.styl
@@ -247,7 +247,7 @@
         display block
         margin 0
         padding 20px
-        text-align center
+        text-align right
         border-top 1px solid _darkgrey
         li
           float none
